--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,15 +12,11 @@ IF(WIN32)
     include_directories(C:\\xpressmp\\include C:\\xpressmp\\lib)
     target_link_libraries(untitled "C:/xpressmp/lib/xprs.lib")
 ELSE(WIN32)
-
     add_executable(untitled  ./Data.cpp  ./GRASP.cpp  ./ModelQuantity.cpp ./SubProblem.cpp   ./Solution.cpp  ./FGenetic.cpp  ./main.cpp ModelRobust.cpp ModelRobust.h)
-
-    link_directories(../xp/include /../xp/lib)
-    include_directories(../xp/include ../xp/lib)
-    target_link_libraries(untitled ../xp/lib/xprs.lib)
+    link_directories(../../xp/include ../../xp/lib)
+    include_directories(../../xp/include ../../xp/lib)
+    target_link_libraries(untitled ../../xp/lib/xprs.lib)
 ENDIF(WIN32)
-
-
 
 link_libraries(xprs.lib)
 add_library(xprs SHARED IMPORTED)
