modify shell for unix

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,9 +13,9 @@ IF(WIN32)
     target_link_libraries(untitled "C:/xpressmp/lib/xprs.lib")
 ELSE(WIN32)
     add_executable(untitled  ./Data.cpp  ./GRASP.cpp  ./ModelQuantity.cpp ./SubProblem.cpp   ./Solution.cpp  ./FGenetic.cpp  ./main.cpp ModelRobust.cpp ModelRobust.h)
-    link_directories(../../xp/include ../../xp/lib)
-    include_directories(../../xp/include ../../xp/lib)
-    target_link_libraries(untitled ../../xp/lib/xprs.lib)
+    link_directories(/home-isis/auto/dapi/s18theve/xp/include /home-isis/auto/dapi/s18theve/xp/lib)
+    include_directories(/home-isis/auto/dapi/s18theve/xp/include /home-isis/auto/dapi/s18theve/xp/lib)
+    target_link_libraries(untitled /home-isis/auto/dapi/s18theve/xp/lib/xprs.lib)
 ENDIF(WIN32)
 
 link_libraries(xprs.lib)
