solve a few bugs, implement different uncertainty sets

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,8 +18,8 @@ ELSE(WIN32)
     target_link_libraries(untitled /home-isis/auto/dapi/s18theve/xp/lib/xprs.lib)
 ENDIF(WIN32)
 
-link_libraries(xprs.lib)
-add_library(xprs SHARED IMPORTED)
+link_libraries(ilocplex)
+add_library(ilocplex SHARED IMPORTED)
 link_libraries(xprb.lib)
 add_library(xprb SHARED IMPORTED)
 link_libraries(xprm_mc.lib)
